--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">EcommerceProducts</string>
-    <string name="title_activity_rewiews">Rewiews</string>
+    <string name="title_activity_rewiews">Productos</string>
     <string-array name="orders_arrays">
         <item>pending</item>
         <item>processing</item>
